# SquareDash

./: .gitignore  CMakeLists.txt  README.md  level.c  level.h  main.c  player.c  player.h
assets/: SquareDashSprites.tsx  level1.csv  level2.csv  level3.csv
